Borrowing some of Cloudflare's old CSS

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Pomflare - The kawaii performance &amp; security company</title>
 <meta name="description" content="Pomflare is a kawaii CDN provider that can speed up and protect any Pomf online">
-<link rel="stylesheet" href="https://web.archive.org/web/20160831075906cs_/https:/www.cloudflare.com/css/main.css?v=1472506092">
-<link rel="stylesheet" href="https://web.archive.org/web/20160831114805cs_/https://www.cloudflare.com/css/home-page.css?v=1472506092">
+<link rel="stylesheet" href="assets/borrowed/main.css">
+<link rel="stylesheet" href="assets/borrowed/home-page.css">
 <link rel="stylesheet" href="assets/styles/home.css">
 <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 </head>
