Change IRC channel

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
 <div class="nav-button"></div>
 <ul class="site-navigation">
 <li class="active"><a href="">Home</a></li>
-<li><a href="https://qchat.rizon.net/?nick=pomflare_user.....&channels=pomfret&prompt=1">Help</a></li>
-<li><a href="https://qchat.rizon.net/?nick=pomflare_user.....&channels=pomfret&prompt=1">Sign up</a></li>
-<li><a href="https://qchat.rizon.net/?nick=pomflare_user.....&channels=pomfret&prompt=1">Login</a></li>
-<li><a class="button primary" href="https://qchat.rizon.net/?nick=pomflare_user.....&channels=pomfret&prompt=1">Under Attack?</a></li>
+<li><a href="https://qchat.rizon.net/?nick=pomflare_user.....&channels=pomflare&prompt=1">Help</a></li>
+<li><a href="https://qchat.rizon.net/?nick=pomflare_user.....&channels=pomflare&prompt=1">Sign up</a></li>
+<li><a href="https://qchat.rizon.net/?nick=pomflare_user.....&channels=pomflare&prompt=1">Login</a></li>
+<li><a class="button primary" href="https://qchat.rizon.net/?nick=pomflare_user.....&channels=pomflare&prompt=1">Under Attack?</a></li>
 </ul>
 <div style="clear: both"></div>
 <div style="clear: both"></div>
@@ -39,7 +39,7 @@
 <div class="text-center" id="home-content">
 <h2>Give us five minutes and we’ll <strong>superhonk</strong> your Pomf.</h2>
 <div class="call-to-action">
-<a class="button success sign-up" href="https://qchat.rizon.net/?nick=pomflare_user.....&channels=pomfret&prompt=1">Sign up now!</a>
+<a class="button success sign-up" href="https://qchat.rizon.net/?nick=pomflare_user.....&channels=pomflare&prompt=1">Sign up now!</a>
 </div>
 </div>
 <hr>
@@ -82,7 +82,7 @@
 <div class="page-bottom">
 <p>Pomflare makes shitposting faster and safer. Join
 today!</p>
-<p><a class="button success" href="https://qchat.rizon.net/?nick=pomflare_user.....&channels=pomfret&prompt=1">Sign up</a></p>
+<p><a class="button success" href="https://qchat.rizon.net/?nick=pomflare_user.....&channels=pomflare&prompt=1">Sign up</a></p>
 </div>
 </div>
 <footer id="footer" class="">
@@ -90,7 +90,7 @@ today!</p>
 <div class="footer-contact-group">
 <h5>Contact</h5>
 <ul>
-<li><a href="https://qchat.rizon.net/?nick=pomflare_user.....&channels=pomfret&prompt=1">Support</a></li>
+<li><a href="https://qchat.rizon.net/?nick=pomflare_user.....&channels=pomflare&prompt=1">Support</a></li>
 </ul>
 </div>
 <div class="footer-group">
